--- a/src/sass/blocks/wrapper.scss
+++ b/src/sass/blocks/wrapper.scss
@@ -1,11 +1,12 @@
 .wrapper {
   width: 100%;
-  min-width: $mobile-width;
-  height: auto;
+  max-width: $desktop-width;
+  // min-width: $mobile-width;
   @include indent();
-
-  @include media-tablet {
-    // width: 500px;
-  }
+  padding: 0 10px;
+  margin-right: auto;
+  margin-left: auto;
+  @include flex();
+  height: auto;
 }
 
