--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,5 +5,13 @@
 @import "blocks/visually-hidden.scss";
 @import "blocks/wrapper.scss";
 @import "blocks/main-nav.scss";
-@import "blocks/header.scss";
-@import "blocks/footer.scss";
+@import "blocks/page-header.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/logo.scss";
+@import "blocks/page-main.scss";
+@import "blocks/slider.scss";
+@import "blocks/breadcrumbs.scss";
+@import "blocks/catalog.scss";
+@import "blocks/modal.scss";
+@import "blocks/modal-overlay.scss";
+@import "blocks/modal-popup.scss";
