--- a/src/sass/blocks/modal-popup.scss
+++ b/src/sass/blocks/modal-popup.scss
@@ -1,22 +1,23 @@
 .modal-popup { 
-    position: fixed;
+    position: relative;
+    // position: fixed;
     @include indent();
-    padding: 35px 64px;
-    top: 50%;
-    left: 50%;
-    margin-top: -250px;
-    margin-left: -10%;
+    // padding: 35px 64px;
+    // top: 50%;
+    // left: 50%;
+    // margin-top: -250px;
+    // margin-left: -10%;
   
-    z-index: 50;
-    min-width: 320px;
-    width: 466px;
-    min-height: 578px;
-    border: 1px solid #c6c6c6;
+    // z-index: 50;
+    // min-width: 320px;
+    // width: 466px;
+    // min-height: 578px;
+    // border: 1px solid #c6c6c6;
     background-color: #ffffff;
 
     @include flex();
     flex-direction: column;
     align-items: center;
 
-    display: none;
+    // display: none;
 }
