--- a/src/sass/blocks/modal.scss
+++ b/src/sass/blocks/modal.scss
@@ -1,3 +1,7 @@
+#hidden-content {
+    transition: all 2s;
+}
+
 .modal {
     display: none;
 }
@@ -11,6 +15,7 @@
     font-weight: 700;
     font-style: normal;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .modal__form {
@@ -22,7 +27,6 @@
     justify-content: space-between;
     align-items: center;
     flex: auto;
-
     outline: 1px dashed red;
 }
 
@@ -32,7 +36,6 @@
     @include indent();
     border: 0 none;
     margin-bottom: 10px;
-
     outline: 1px dashed blue;
 }
 
@@ -52,7 +55,6 @@
     text-transform: uppercase;
     padding: 10px;
     margin-bottom: 10px;
-
     border: none;
     box-shadow: 0 none;
     background-color: rgba(0, 0, 0, 0.5);
@@ -68,8 +70,8 @@
 
 .modal__close {
     position: absolute;
-    top: -27px;
-    right: -27px;
+    top: -50px;
+    right: -50px;
     width: 27px;
     height: 27px;
     background-color: rgba(0, 0, 0, 0.5);
