--- a/src/sass/blocks/modal-popup.scss
+++ b/src/sass/blocks/modal-popup.scss
@@ -1,23 +1,9 @@
 .modal-popup { 
     position: relative;
-    // position: fixed;
     @include indent();
-    // padding: 35px 64px;
-    // top: 50%;
-    // left: 50%;
-    // margin-top: -250px;
-    // margin-left: -10%;
-  
-    // z-index: 50;
-    // min-width: 320px;
-    // width: 466px;
-    // min-height: 578px;
-    // border: 1px solid #c6c6c6;
-    background-color: #ffffff;
-
+    min-width: 320px;
+    width: 380px;
     @include flex();
     flex-direction: column;
     align-items: center;
-
-    // display: none;
 }
