--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -14,7 +14,7 @@ body {
   @include flex();
   flex-direction: column;
   justify-content: center;
-  // min-width: $mobile-width;
+  min-width: $mobile-width;
   width: 100%;
   max-width: 100%;
   color: #767676;
