--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -8,6 +8,7 @@
 }
 
 .catalog__sidebar {
+    width: 178px;
     max-width: 178px;
     @include indent();
     @include flex();
@@ -22,8 +23,8 @@
 }
 
 .catalog__sidebar-sublist {
-    margin-left: 22px;
-    margin-bottom: 5px;
+    margin-left: 23px;
+    margin-bottom: 4px;
     list-style-type: disc;
 }
 
@@ -55,16 +56,18 @@
     }
 }
 
+.catalog__sidebar-sublink {
+    line-height: 1.5;
+}
+
 .catalog__sidebar-link {
     font-size: 18px;
     padding-top: 5px;
-    padding-bottom: 5px;
-    
-    outline: 2px dashed purple;
+    padding-bottom: 4px;
 }
 
 .catalog__sidebar-link--active {
-    padding-bottom: 0;
+    padding-bottom: 2px;
     text-decoration: underline;
 }
 
@@ -98,8 +101,8 @@
     &::before {
         content: "";
         position: absolute;
-        top: -120px;
-        right: 25%;
+        top: -118px;
+        right: 20%;
         width: 97px;
         height: 111px;
         background-image: url("../../img/exel.png");
@@ -122,8 +125,6 @@
     @include flex();
     @include list();
     align-items: center;
-
-    // margin-bottom: 20px;
 }
 
 .catalog__item {
@@ -131,7 +132,7 @@
     height: 380px;
     @include indent();
     margin-bottom: 20px;
-    margin-left: 18px;
+    margin-left: 17px;
     padding: 20px;
     @include flex();
     flex-direction: column;
@@ -148,6 +149,7 @@
 .catalog__item-title {
     display: block;
     padding: 0.5em;
+    padding-left: 0;
     color: #767676;
     font-size: 18px;
     font-weight: 400;
@@ -174,8 +176,6 @@
     justify-content: space-between;
     align-items: center;
     margin-top: auto;
-
-    outline: 1px dashed blue;
 }
 
 .catalog__item-price {
@@ -197,10 +197,20 @@
     width: 28px;
     height: 21px;
     margin-right: 10px;
+    cursor: pointer;
 
     background-image: url("../../img/addtobasket_mini.png");
     background-repeat: no-repeat;
     background-position: center center;
+
+    &:hover,
+    &:focus {
+        opacity: 0.5;
+    }
+
+    &:active {
+        opacity: 0.8;
+    }
 }
 
 .catalog__pagination-list {
@@ -212,7 +222,7 @@
 
     max-width: 180px;
     margin-left: 320px;
-    margin-bottom: 52px;
+    margin-bottom: 53px;
 }
 
 .catalog__pagination-item {
@@ -242,29 +252,25 @@
 .catalog__text {
     position: relative;
     @include indent();
+    padding-left: 15px;
     width: 100%;
     max-width: 100%;
     @include flex();
-    justify-content: center;
     align-self: center;
-    margin-bottom: 160px;
+    margin-bottom: 170px;
+    text-align: left;
 
     border-top: 2px solid #767676;
-
-    outline: 3px dashed crimson;
 }
 
 .catalog__text-paragraph {
-    max-width: 45%;
-    padding: 0.8em 0;
-    padding-right: 0;
-    letter-spacing: 0.5px;
-
-    &:first-of-type {
-        margin-right: 35px;
-    }
+    max-width: 47%;
+    padding: 0.7em;
+    letter-spacing: 0.28px;
+    line-height: 22.69px;
 
     &:last-of-type {
         padding-right: 0;
+        margin-left: auto;
     }
 }
