--- a/src/sass/blocks/page-footer.scss
+++ b/src/sass/blocks/page-footer.scss
@@ -94,7 +94,7 @@
         width: 40px;
         height: 40px;
         background-color: transparent;
-        background-image: url("../../img/company.png");
+        background-image: url("../img/company.png");
         background-repeat: no-repeat;
         background-position: center bottom;
     }
