--- a/src/sass/blocks/slider.scss
+++ b/src/sass/blocks/slider.scss
@@ -32,13 +32,13 @@
 .slider__slide--1 {
     display: block;
 
-    background-image: url("../../img/slide-1.png");
+    background-image: url("../img/slide-1.png");
     background-repeat: no-repeat;
     background-position: center bottom;
 }
 
 .slider__slide--2 {
-    background-image: url("../../img/slide-2.png");
+    background-image: url("../img/slide-2.png");
     background-repeat: no-repeat;
     background-position: center bottom;
 
