--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -105,7 +105,7 @@
         right: 20%;
         width: 97px;
         height: 111px;
-        background-image: url("../../img/exel.png");
+        background-image: url("../img/exel.png");
         background-repeat: no-repeat;
         background-position: center center;
     }
@@ -199,7 +199,7 @@
     margin-right: 10px;
     cursor: pointer;
 
-    background-image: url("../../img/addtobasket_mini.png");
+    background-image: url("../img/addtobasket_mini.png");
     background-repeat: no-repeat;
     background-position: center center;
 
