--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -3,7 +3,6 @@
     width: 100%;
     max-width: 100%;
     @include flex();
-    flex-wrap: nowrap;
     justify-content: center;
 }
 
@@ -63,7 +62,7 @@
 .catalog__sidebar-link {
     font-size: 18px;
     padding-top: 5px;
-    padding-bottom: 4px;
+    padding-bottom: 2px;
 }
 
 .catalog__sidebar-link--active {
@@ -101,7 +100,7 @@
     &::before {
         content: "";
         position: absolute;
-        top: -118px;
+        top: -116px;
         right: 20%;
         width: 97px;
         height: 111px;
@@ -247,6 +246,7 @@
 
 .catalog__pagination-link--active {
     font-size: 16px;
+    margin-top: -2px;
 }
 
 .catalog__text {
@@ -257,10 +257,16 @@
     max-width: 100%;
     @include flex();
     align-self: center;
-    margin-bottom: 170px;
+    margin-bottom: 172px;
     text-align: left;
 
     border-top: 2px solid #767676;
+
+    @include media-tablet {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .catalog__text-paragraph {
@@ -272,5 +278,9 @@
     &:last-of-type {
         padding-right: 0;
         margin-left: auto;
+
+        @include media-tablet {
+            margin-left: 0;
+        }
     }
 }
