--- a/src/sass/blocks/page-header.scss
+++ b/src/sass/blocks/page-header.scss
@@ -9,7 +9,7 @@
 
 .page-header__wrapper {
     padding: 40px 10px;
-    padding-bottom: 65.5px;
+    padding-bottom: 65px;
     justify-content: space-between;
 }
 
@@ -20,6 +20,11 @@
     width: 27.3%;
     margin-right: auto;
     margin-top: 27px;
+
+    @include media-tablet {
+        width: 40%;
+        max-width: 40%;
+    }
 }
 
 .page-header__contacts {
@@ -27,11 +32,16 @@
     @include flex();
     flex-direction: column;
     align-items: center;
-    width: 26.1%;
+    width: 26.2%;
     margin-left: auto;
     
     & .page-header__contacts-item:last-child {
         align-self: flex-end;
+    }
+
+    @include media-tablet {
+        width: 40%;
+        max-width: 40%;
     }
 }
 
@@ -65,7 +75,7 @@
     line-height: 46px;
     text-align: right;
     text-decoration: none;
-    letter-spacing: 0.8px;
+    letter-spacing: 0.7px;
 
     padding: 0;
 }
