--- a/src/sass/blocks/modal.scss
+++ b/src/sass/blocks/modal.scss
@@ -7,8 +7,8 @@
 }
 
 .fancybox-content {
-    top: 70px;
-    margin-right: -20px;
+    top: -100px;
+    // margin-right: -20px;
     padding: 27px;
     background-color: transparent;
 }
